Bug 1140160 - Handle insertions into a <fieldset> child with display:contents correctly.  r=roc